FEAT: 회원가입, 로그인 페이지

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>정글 한 줄</title>
+
 </head>
 <body>
-  jungle oneline
+  <h1 class="text-9xl font-bold underline">
+    jungle
+  </h1>
 </body>
 </html>
