회원가입api수정

--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -91,13 +91,14 @@
   <section class="topSection"></section>
 
   <section class="middleSection">
-    <form id="form_Container">
+    <form id="form_Container" action="http://localhost:5001/user/feature/signup" method="post">
       <h1 id="Title">회원가입</h1>
-      <input class="inputBox" id="id" placeholder="아이디를 입력해주세요." required>
+      <input class="inputBox" id="id" name ="id" placeholder="아이디를 입력해주세요." required >
       <input class="inputBox" type="password" placeholder="비밀번호를 입력해주세요." required>
-      <input class="inputBox" type="password" placeholder="비밀번호를 한번 더 입력해주세요." required>
-      <input class="inputBox" id="nickname" placeholder="별명을 입력해주세요." required>
-      <textarea class="textArea" placeholder="자기소개를 작성해주세요." style="resize: none;"></textarea>
+      <input class="inputBox" type="password" name="password" placeholder="비밀번호를 한번 더 입력해주세요." required>
+      <input class="inputBox" id="name" name ="name" placeholder="이름을 입력해주세요." required >
+      <input class="inputBox" id="nickname" name= "nickname" placeholder="별명을 입력해주세요." required>
+      <textarea class="textArea" name ="myself"placeholder="자기소개를 작성해주세요." style="resize: none;"></textarea>
       <span class="img_Container">
         <img class="imgBox" src="" alt="non picture" />
         <button>이미지 등록하기</button>
