--- a/templates/logIn.html
+++ b/templates/logIn.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
   <title>정글 한 줄</title>
 
   <style>
@@ -63,6 +67,33 @@
     }
 
   </style>
+
+  <script>
+
+  function postInfo(){
+    let id = $("#id").val()
+    let pw = $("#password").val()
+
+    // postInfo에 POST 방식으로 메모 생성 요청하기
+    $.ajax({
+      type: "POST", // POST 방식으로 요청하겠다.
+      url: "/ismember", // ismemner라는 url에 요청하겠다.
+      data: {id_give: id, pw_give: pw}, // 데이터를 주는 방법
+      success: function (response) { // 성공하면
+          if (response["result"] == "success") {
+              alert("로그인 성공!");
+              // 성공시 페이지 이동하기
+              window.location.href = 'http://localhost:5001/user/list';
+          } else if (result["result"] == "id_fail") {
+              alert("아이디가 없습니다.")
+          } else {
+              alert("비밀번호가 맞지 않습니다.")
+          }
+        }
+      })
+    }
+
+  </script>
 </head>
 <body>
   <section class="topSection">
@@ -74,10 +105,12 @@
     <form id="form_Container">
       <h1 id="Title">로그인</h1>
       <input class="inputBox" id="id" placeholder="아이디를 입력해주세요.">
-      <input class="inputBox"type="password" placeholder="비밀번호를 입력해주세요.">
+      <input class="inputBox" id="password" type="password" placeholder="비밀번호를 입력해주세요.">
       <span class="button_Container">
-        <button class="button" type="submit" >로그인</button>
-        <button class="button" type="button" >회원가입 하기</button>
+        <!-- type="submit"에서 "button"으로 수정 -->
+        <button onclick="postInfo()" class="button" type="button" >로그인</button>
+        <!-- location.href''은 페이지 이동(뒤로가기 가능) -->
+        <button onclick="location.href='http://localhost:5001/user/signup?'" class="button" type="button" >회원가입 하기</button>
       </span>
     </form>
   </section>
