--- a/templates/logIn.html
+++ b/templates/logIn.html
@@ -69,29 +69,29 @@
   </style>
 
   <script>
-
+  // login 데이터(id, pw)를 받아옴
   function postInfo(){
     let id = $("#id").val()
     let pw = $("#password").val()
 
     // postInfo에 POST 방식으로 메모 생성 요청하기
     $.ajax({
-      type: "POST", // POST 방식으로 요청하겠다.
-      url: "/ismember", // ismemner라는 url에 요청하겠다.
-      data: {id_give: id, pw_give: pw}, // 데이터를 주는 방법
-      success: function (response) { // 성공하면
-          if (response["result"] == "success") {
-              alert("로그인 성공!");
-              // 성공시 페이지 이동하기
-              window.location.href = 'http://localhost:5001/user/list';
-          } else if (result["result"] == "id_fail") {
-              alert("아이디가 없습니다.")
-          } else {
-              alert("비밀번호가 맞지 않습니다.")
-          }
+      type: "POST", // POST 방식으로 요청
+      url: "/user/feature/login", // user/feature/login 이라는 url에 요청
+      data: {id_give: id, pw_give: pw}, // 데이터를 넘겨줌 
+      success: function (response) { // API로부터 성공적으로 응답을 받는다면,
+        if (response["result"] == "success") {
+          alert("로그인 성공!");
+          // 성공시 명단 페이지로 이동하기
+          window.location.href = 'http://localhost:5001/user/list';
+        } else if (response["result"] == "id_fail") {
+          alert("아이디가 없습니다.")
+        } else {
+          alert("비밀번호가 맞지 않습니다.")
         }
-      })
-    }
+      }
+    })
+  }
 
   </script>
 </head>
