--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -5,88 +5,131 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>정글 한 줄</title>
 
-</head>
-<style>
-
-  .topSection {
-    height: 10rem;
-    background-color: burlywood;
-    border: 1px soild black;
-  }
-
+  <style>
   
-  .middleSection {
-    display: flex;
-    justify-content: center;
+    .topSection {
+      height: 10rem;
+      background-color: burlywood;
+      border: 1px soild black;
+    }
+  
+    
+    .middleSection {
+      display: flex;
+      justify-content: center;
+  
+      margin-top: 5rem;
+    }
+  
+    #Title{
+      text-align: center;
+    }
+  
+    #form_Container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  
+      width: 50%;
+      height: auto;
+  
+      border: 1px solid black;
+    }
+  
+    .inputBox {
+      font-size: medium;
+      width: 30rem;
+      height: 3em;
+  
+      margin: 1rem;
+  
+      border: 1px solid gray;
+      border-radius: 5px;
+    }
+  
+    .textArea {
+      width: 30rem;
+      height: 10rem;
+  
+      font-size:large;
+      border-radius: 5px;
+    }
+  
+    .img_Container {
+      width: 30rem;
+      height: 10rem;
+  
+      margin: 1rem;
+  
+      border: 1px solid gray;
+      border-radius: 5px;
+    }
+  
+    .imgBox {
+      width: 10em;
+      height: 10em;
+  
+      border: 1px solid black;
+    }
+  
+    .button_Container {
+      display: flex;
+      justify-content: center;
+  
+      width: 20rem;
+      margin: 1rem;
+  
+      border: 1px solid black;
+    }
+  
+    .button {
+      margin: 1rem;
+    }
+  </style>
 
-    margin-top: 5rem;
+<script>  
+  function previewFile() {
+    var preview = document.getElementById('previewImage');
+    var fileInput = document.getElementById('fileInput');
+    var file = fileInput.files[0];
+    var reader = new FileReader();
+
+    reader.onloadend = function () {
+      preview.src = reader.result;
+    };
+
+    if (file) {
+      reader.readAsDataURL(file);
+    } else {
+      preview.src = "";
+    }
   }
 
-  #Title{
-    text-align: center;
-  }
+  function validateFile() {
+    var fileInput = document.getElementById('fileInput');
+    var fileSize = fileInput.files[0].size; // 파일 크기 (bytes)
+    
+    // 파일 크기 제한 (5MB)
+    var maxSize = 5 * 1024 * 1024;
+    if (fileSize > maxSize) {
+        alert('파일 크기는 2MB를 초과할 수 없습니다.');
+        fileInput.value = ''; // 파일 선택 초기화
+        return;
+    }
 
-  #form_Container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    // 파일 형식 제한 (예: 이미지 파일만 허용)
+    var allowedTypes = ['image/jpeg', 'image/png', 'image/gif'];
+    var fileType = fileInput.files[0].type;
+    if (!allowedTypes.includes(fileType)) {
+        alert('지원되지 않는 파일 형식입니다. 이미지 파일만 업로드 가능합니다.');
+        fileInput.value = ''; // 파일 선택 초기화
+        return;
+    }
 
-    width: 50%;
-    height: auto;
-
-    border: 1px solid black;
-  }
-
-  .inputBox {
-    font-size: medium;
-    width: 30rem;
-    height: 3em;
-
-    margin: 1rem;
-
-    border: 1px solid gray;
-    border-radius: 5px;
-  }
-
-  .textArea {
-    width: 30rem;
-    height: 10rem;
-
-    font-size:large;
-    border-radius: 5px;
-  }
-
-  .img_Container {
-    width: 30rem;
-    height: 10rem;
-
-    margin: 1rem;
-
-    border: 1px solid gray;
-    border-radius: 5px;
-  }
-
-  .imgBox {
-    width: 10em;
-    height: 10em;
-
-    border: 1px solid black;
-  }
-
-  .button_Container {
-    display: flex;
-    justify-content: center;
-
-    width: 20rem;
-    margin: 1rem;
-
-    border: 1px solid black;
-  }
-
-  .button {
-    margin: 1rem;
-  }
-</style>
+    previewFile();
+}
+</script>
+</head>
 <body>
   <section class="topSection"></section>
 
@@ -100,9 +143,8 @@
       <input class="inputBox" id="nickname" name= "nickname" placeholder="별명을 입력해주세요." required>
       <textarea class="textArea" name ="myself"placeholder="자기소개를 작성해주세요." style="resize: none;"></textarea>
       <span class="img_Container">
-        <img class="imgBox" src="" alt="non picture" />
-        <input type="file" name="file">
-        <button>이미지 등록하기</button>
+        <img class="imgBox" id="previewImage" src="" alt="non picture" />
+        <input type="file" name="file" id="fileInput" onchange="validateFile()">
       </span>
       <span class="button_Container">
         <button class="button" type="submit" >가입</button>
