--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>정글 한 줄</title>
+
+  <!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <style>
     .middleSection {
@@ -71,14 +75,23 @@
 
       border: 1px solid black;
     }
-
   </style>
+
+  <script>
+    // @@ 선택된 교육생 세션 유지용, 일단 스트링으로 표현, merge 후 수정 예정 @@
+    var pickId = "k"
+    sessionStorage.setItem("pickId", pickId)
+    // 아래는 로그인한 사용자 세션
+    var loadedId = sessionStorage.getItem("myId");
+
+  </script>
 </head>
+
 <body>
   <section class="middleSection">
     <form id="search_Container">
-        <input class="inputBox" placeholder="검색할 이름을 입력해주세요.">
-        <button style="width:5rem; height:2rem;" type="submit">검색</button>
+      <input class="inputBox" placeholder="검색할 이름을 입력해주세요.">
+      <button style="width:5rem; height:2rem;" type="submit">검색</button>
     </form>
     <div id="sort_Container">
       <h3>정렬 방식</h3>
@@ -89,10 +102,11 @@
   <section class="listSection">
     <h1>리스트 목록 보이는 곳</h1>
     <div id="userBox">
-    <div>
+      <div>
   </section>
   <div>
-    
+
   </div>
 </body>
+
 </html>
