--- a/templates/writing.html
+++ b/templates/writing.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <title>정글 한 줄</title>
 
@@ -38,12 +40,12 @@
       display: flex;
       align-items: center;
       justify-content: center;
-            
+
       width: 7rem;
       height: 2rem;
-      
+
       margin-left: 1rem;
-      
+
       background-color: beige;
       border-radius: 15px;
     }
@@ -61,12 +63,12 @@
       width: 70rem;
       height: 1rem;
       resize: none;
-      overflow:hidden;
+      overflow: hidden;
 
       padding: 1rem;
       margin: 1rem;
 
-    
+
       border-radius: 10px;
     }
 
@@ -77,52 +79,133 @@
 
       margin-bottom: 3rem;
     }
-
   </style>
   <script>
-    // $(document).ready(function() {
-    //     $('#key').click(function() {
-    //         $(this).toggleClass('keyword');
-    //     });
-    // });
+    // 변수 불러오기(사용자 세션 유지용)
+    var loadedId = sessionStorage.getItem("myId");
+    // @@ 선택한 교육생 세션, 수정 예정
+    var loadedPId = sessionStorage.getItem("pickId");
 
+    var selectedGKey = [];
+    var selectedBKey = [];
 
-  </script>  
+    function isGClick(button) {
+      var keyword = button.innerHTML;
+
+      // 이미 선택된 키워드인지 확인
+      if (selectedGKey.includes(keyword)) {
+        // 이미 선택된 경우, 배열에서 제거하고 색상 초기화
+        selectedGKey = selectedGKey.filter(item => item !== keyword);
+        button.style.color = "";
+      } else {
+        // 아직 선택되지 않은 경우, 최대 3개까지만 추가하고 색상 변경
+        if (selectedGKey.length < 3) {
+          selectedGKey.push(keyword);
+          button.style.color = "red";
+        }
+      }
+      // 선택된 키워드 출력
+      // console.log("Selected Keywords:", selectedGKey);
+    }
+
+    function isBClick(button) {
+      var keyword = button.innerHTML;
+
+      if (selectedBKey.includes(keyword)) {
+        selectedBKey = selectedBKey.filter(item => item !== keyword);
+        button.style.color = "";
+      } else {
+        if (selectedBKey.length < 3) {
+          selectedBKey.push(keyword);
+          button.style.color = "blue";
+        }
+        // 선택된 키워드 출력
+        // console.log("Selected Keywords:", selectedBKey);
+      }
+    }
+
+    // 클릭 이벤트 핸들러 연결
+    $(".keywordBox button").on("click", function () {
+      var isG = $(this).closest(".keywordBox").attr("id") === "select";
+      if (isG) {
+        selectedGKey = isGClick(this);  // 반환값을 selectedGKey에 할당
+      } else {
+        selectedBKey = isBClick(this);  // 반환값을 selectedBKey에 할당
+      }
+    });
+
+    // Ajax로 서버로 데이터 전송
+    function sendData() {
+      var comment = $("#inputComment").val();
+
+      $.ajax({
+        type: "POST",
+        url: "/user/feature/getdata",
+        data: {'pid_give': loadedPId, 'comment_give': comment,
+        'selectedGKey': JSON.stringify(selectedGKey),
+        'selectedBKey': JSON.stringify(selectedBKey)
+        // ajax에서 API로 배열을 넘기기 위해 문자열로 변환한다.
+        },
+        success: function (response) {
+          if (response['result'] != 'success') {
+            alert("정보를 받아오지 못했습니다.")
+            return;
+          } 
+          // 성공한 경우
+          alert("등록이 완료되었습니다!")
+          console.log(response)
+          window.location.href = '/user/comment';
+        }
+      });
+    }
+
+  </script>
 </head>
 
 <body>
   <section class="middleSection">
-    <h1>춘식이</h1>
+    <h1>춘식이(세션 수정 예정)</h1>
 
     <div id="keyword_Container">
-      <h1 style="padding-left: 2rem;"> 장점 키워드를 선택해주세요. (최대 3개)</h1>
+      <h1 style="padding-left: 2rem;">장점 키워드를 선택해주세요. (최대 3개)</h1>
       <div class="keywordBox">
-        <!-- <div id="key""><p>성실함</p></div>
+        <button class="keyword" onclick="isGClick(this)">성실함</button>
+        <button class="keyword" onclick="isGClick(this)">친화적</button>
+        <button class="keyword" onclick="isGClick(this)">꼼꼼함</button>
+        <button class="keyword" onclick="isGClick(this)">끈기있는</button>
+      </div>
+      <h1 style="padding-left: 2rem;">단점 키워드를 선택해주세요. (최대 3개)</h1>
+      <div class="keywordBox">
+        <button class="keyword" onclick="isBClick(this)">불성실함</button>
+        <button class="keyword" onclick="isBClick(this)">비판적</button>
+        <button class="keyword" onclick="isBClick(this)">비협조적</button>
+        <button class="keyword" onclick="isBClick(this)">의지가 약한</button>
+      </div>
+
+      <!-- <div id="key""><p>성실함</p></div>
         <div id="key"><p>열정적임</p></div>
-        <div id="key"><p>친절함</p></div> -->
-        <span class="keyword">성실함</span>
-        <span class="keyword">열정적임</span>
-        <span class="keyword">친절함</span>
-      </div>
-      <h1 style="padding-left: 2rem;"> 단점 키워드를 선택해주세요. (최대 3개)</h1>
-      <div class="keywordBox">
-        <span class="keyword">게으름</span>
-        <span class="keyword">성급함</span>
-        <span class="keyword">지각쟁이</span>
-      </div>
+        <div id="key"><p>친절함</p></div> 
+        "Gkeyword": [{'성실함':0},{'친화적':0},{'꼼꼼함':0},{'끈기있는':0}],
+      "Bkeyword": [{'불성실함':0},{'비판적':0},{'비협조적':0},{'의지가 약한':0}],
+      -->
+      <!--      
       <h1 style="padding-left: 2rem;"> 선택된 키워드</h1>
       <div class="keywordBox">
-        <span class="keyword">게으름</span>
-        <span class="keyword">성급함</span>
-        <span class="keyword">지각쟁이</span>
-      </div>
-    </div> 
-  <div id="comment_Container">
-    <h1 style="padding-left: 2rem;"> 한줄평</h1>
-    <textarea class="commentBox" placeholder="한줄평을 작성해주세요."></textarea>
-  </div>
 
-  <button type="button" class="button">등록하기</button>
+        <button class="keyword">게으름</button>
+        <button class="keyword">성급함</button>
+        <button class="keyword">지각쟁이</button>
+      
+      </div>
+      -->
+    </div>
+    <div id="comment_Container">
+      <h1 style="padding-left: 2rem;"> 한줄평</h1>
+      <textarea class="commentBox" id="inputComment" placeholder="한줄평을 작성해주세요.(최대 30자)" maxlength="30"></textarea>
+    </div>
+
+    <button type="button" class="button" onclick="sendData()">등록하기</button>
   </section>
 </body>
+
 </html>
