--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>정글 한 줄</title>
-
+  <!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <style>
     .middleSection {
       display: flex;
@@ -73,6 +74,21 @@
     }
 
   </style>
+  <!-- <script>
+  function list_sort(new_mode){
+    $.ajax({
+        type: "POST",
+        url: "/user/feature/listsort",
+        data: {'new_mode': new_mode},
+        success: function(response){
+            //console.log(response);
+            alert('성공')
+        }
+    });
+}
+  
+
+  </script> -->
 </head>
 <body>
   <section class="middleSection">
@@ -82,8 +98,13 @@
     </form>
     <div id="sort_Container">
       <h3>정렬 방식</h3>
-      <button class="sorter" type="button">가나다 순으로</button>
-      <button class="sorter" type="button">키워드 많은 순으로</button>
+      <form action="http://localhost:5001/user/feature/listsort1" method="post">
+      <button class="sorter" type="submit" >가나다 순으로</button>
+      </form>
+      <form action="http://localhost:5001/user/feature/listsort2" method="post">
+      <button class="sorter" type="submit" >키워드 많은 순으로</button>
+      </form>
+      
     </div>
   </section>
   <section class="listSection">
