CSS: 상단 배너 및 css 수정

--- a/templates/logIn.html
+++ b/templates/logIn.html
@@ -13,7 +13,7 @@
   <style>
     .topSection {
       height: 10rem;
-      background-color: burlywood;
+      padding-top: 1rem;
     }
 
     .logo {
@@ -103,7 +103,7 @@
 <body>
   <section class="topSection">
     <div class="logo">
-      <a href="/"><img src="../static/logo.png" width="200"></a>
+      <a href="/"><img src="../static/logo.png" width="300" height="120"></a>
     </div>
   </section>
   <section class="middleSection">
