--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -10,15 +10,21 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <style>
+    .topSection {
+      height: 10rem;
+      padding-top: 1rem;
+    }
+
     .middleSection {
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: center;
 
-      margin-top: 5rem;
+      margin: 10rem 10rem;
 
-      border: 1px solid black;
+      border-radius: 40px;
+      border: 1px solid lightseagreen;
     }
 
     #search_Container {
@@ -27,16 +33,21 @@
 
       width: auto;
 
-      margin-right: 5rem;
+      margin-right: 3rem;
 
       /* border: 1px solid black; */
     }
 
     .inputBox {
-      width: 30rem;
-      height: 2rem;
+      font-size: larger;
+      width: 50rem;
+      height: 5rem;
 
-      margin: 1rem;
+      padding-left: 2rem;
+      margin-right: 3rem;
+
+      border-radius: 20px;
+      border: 1px solid gainsboro;
     }
 
     #sort_Container {
@@ -52,10 +63,25 @@
       /* border: 1px solid black; */
     }
 
+    .button {
+      
+      width: 5rem;
+      height: 3rem;
+      
+      background-color: white;
+      border-radius: 20px;
+      border: 1px solid lightgrey;
+    }
+
     .sorter {
-      width: 10rem;
-      height: 2.5rem;
-      margin: 1rem;
+      font-size: large;
+      width: 12rem;
+      height: 3rem;
+      margin: 0.5rem;
+
+      background-color: white;
+      border-radius: 15px;
+      border: 1px solid lightgrey;
     }
 
     .listSection {
@@ -64,17 +90,49 @@
       align-items: center;
       justify-content: center;
 
-
-
-      border: 1px solid black;
+      height: auto;
     }
 
-    #userBox {
+    .infoContainer {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
       width: 80rem;
       height: 15rem;
 
-      border: 1px solid black;
+      margin-bottom: 3rem;
+
+      border-radius: 20px;
+      border: 3px solid lightgrey;
     }
+
+    .imgBox {
+      width: 10rem;
+      height: 10rem;
+
+      margin: 0 15rem 0 5rem;
+    }
+
+    .name {
+      text-align: center;
+      width: 10rem;
+      margin-right: 20rem;
+    }
+
+    .keyword {
+      text-align: center;
+      font-size: 1.5rem;
+      width: 8rem;
+      height: auto;
+
+      margin: 1rem;
+
+      /* background-color: crimson; */
+      border: 3px solid crimson;
+      border-radius: 10px;
+    }
+
   </style>
 
   <script>
@@ -88,38 +146,38 @@
 </head>
 
 <body>
+  <section class="topSection">
+    <div class="logo">
+      <a href="/main/list"><img src="../static/logo.png" width="300" height="120"></a>
+    </div>
+  </section>
   <section class="middleSection">
-    <form id="search_Container" action="http://localhost:5001/user/feature/search" method="post">
+    <form id="search_Container" action="/main/search" method="post">
         <input class="inputBox" placeholder="검색할 이름을 입력해주세요." name="name">
-        <button style="width:5rem; height:2rem;" type="submit">검색</button>
+        <button class="button" type="submit">검색</button>
     </form>
     <div id="sort_Container">
       <h3>정렬 방식</h3>
-      <form action="http://localhost:5001/user/feature/listsort1" method="post">
+      <form action="/main/namesort" method="post">
       <button class="sorter" type="submit" >가나다 순으로</button>
       </form>
-      <form action="http://localhost:5001/user/feature/listsort2" method="post">
+      <form action="/main/commentsort" method="post">
       <button class="sorter" type="submit" >키워드 많은 순으로</button>
       </form>
       
     </div>
   </section>
   <section class="listSection">
-    <h1>리스트 목록 보이는 곳</h1>
-    <div id="userBox">
-      {% for data in new_data %}
-      <li><a href="{{ url_for('userPage', user_name=data['Name']) }}">{{ data['Name'] }}</a></li>
-      <ul>
-        {% for gkeyword in data.Gkeyword %}
-          <li>{{ gkeyword }}</li>
+    {% for data in new_data %}
+    <div class="infoContainer">
+      <img class="imgBox" src="{{ url_for('static', filename='/uploads/' + data['Img']['filename']) }}" />
+      <div class="name"><a style="font-size: xx-large; text-decoration-line: none; color: black;"href="{{ url_for('userPage', user_name=data['Name']) }}"/>{{ data['Name'] }}</div>
+      {% for gkeyword in data.Gkeyword %}
+          <div class="keyword">{{ gkeyword }}</div>
         {% endfor %}
-      </ul>
+    </div>    
     {% endfor %}
-    <div>
   </section>
-  <div>
-
-  </div>
 </body>
 
 </html>
