--- a/templates/userPage.html
+++ b/templates/userPage.html
@@ -141,6 +141,17 @@
   // @@ 선택한 교육생 세션, 수정 예정
   var loadedPId = sessionStorage.getItem("pickId");
 
+  // [2-1] "페이지 로딩 후 함수가 실행되게 한다." 
+  $(document).ready(function () { // 페이지 로딩시 영화 정보를 출력하는 함수들을 실행되게 합니다.
+    showInfo()
+
+    // 내림 차순으로 정렬하는 함수
+    keywordSorter()
+
+    // 한줄평을 DB로부터 받아오는 함수
+    // comments() 
+  });
+
   // API로부터 교육생 정보 받아오기
   function showInfo() {
     // 컨테이너 비우기
@@ -184,14 +195,23 @@
         }
         let GKey = response['GKey']
         let BKey = response['BKey']
-        let Nick = response['Nickname']
+        // let Nick = response['Nickname']
         let Comments = response['Comment']
+        let IsShow = response['IsShow']
+        let IsWrited = response['IsWrited']
 
-        addKeyword(GKey, BKey, Nick, Comments)
+        if (loadedId == loadedPId && IsShow >= 10) {
+          $('#Bkey-list').css('display', 'flex');
+        } else {
+          $('#Bkey-list').css('display', 'none');
+        }
+
+        addKeyword(GKey, BKey, Comments, IsWrited)
       }
     })
 
-    function addKeyword(GKey, BKey, Nick, Comments) {
+
+    function addKeyword(GKey, BKey, Comments, IsWrited) {
       for (let i = 0; i < GKey.length; i++) {
         let GKeyValue = Object.keys(GKey[i]).join(", "); // GPT
 
@@ -204,20 +224,28 @@
       $('#Bkey-list').append(`
             <span class="B_keyword">${BKeyValue}</span>
         `);
+
+      for (let i = 0; i < Comments.length; i++) {
+        let Comment = Object.values(Comments[i]).join(", "); // GPT
+        $('#Comment-list').append(`
+          <div class="comment">${Comment}</div>
+        `);
+
+        if (IsWrited.includes(loadedId)) {
+          $('#Bkey-list').css('display', 'flex');
+          $('#Gkey-list').css('display', 'flex');
+          $('#Comment-list').css('display', 'flex');
+        } else {
+          $('#Bkey-list').css('display', 'none');
+          $('#Gkey-list').css('display', 'none');
+          $('#Comment-list').css('display', 'none');
+
+        }
+      }
     }
-
-    // @@ Comments 등록하기 전까지는 예외처리 @@
-    // for (let i = 0; i < Comments.length; i++) {
-    //   let Comment = Object.values(Comments[i]).join(", "); // GPT
-
-    //   $('#Comment-list').append(`
-    //       <div class="nickname">${Nick}</div>
-    //       <div class="comment">${Comment}</div>
-    //     `);
-    // }
   }
-
-// </script>
+</script>
+<html>
 
 <body>
   <section class="middleSection">
