--- a/templates/writing.html
+++ b/templates/writing.html
@@ -83,8 +83,8 @@
   <script>
     // 변수 불러오기(사용자 세션 유지용)
     var loadedId = sessionStorage.getItem("myId");
-    // @@ 선택한 교육생 세션, 수정 예정
-    var loadedPId = sessionStorage.getItem("pickId");
+    // 선택한 교육생 세션 @@@@@@@@@@@@@@ id로된거 수정
+    var loadedName = sessionStorage.getItem("pName");
 
     var selectedGKey = [];
     var selectedBKey = [];
@@ -140,7 +140,7 @@
       $.ajax({
         type: "POST",
         url: "/user/feature/getdata",
-        data: {'id_give': loadedId, 'pid_give': loadedPId, 'comment_give': comment,
+        data: {'id_give': loadedId, 'pname_give': loadedName, 'comment_give': comment,
         'selectedGKey': JSON.stringify(selectedGKey),
         'selectedBKey': JSON.stringify(selectedBKey)
         // ajax에서 API로 배열을 넘기기 위해 문자열로 변환한다.
@@ -153,7 +153,7 @@
           // 성공한 경우
           alert("등록이 완료되었습니다!")
           console.log(response)
-          window.location.href = '/user/comment';
+          window.location.href = '/main/list' ;
         }
       });
     }
@@ -163,7 +163,7 @@
 
 <body>
   <section class="middleSection">
-    <h1>춘식이(세션 수정 예정)</h1>
+    <!-- <h1>춘식이(세션 수정 예정)</h1> -->
 
     <div id="keyword_Container">
       <h1 style="padding-left: 2rem;">장점 키워드를 선택해주세요. (최대 3개)</h1>
