--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -10,9 +10,28 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <style>
+    a {
+      color: black;
+      text-decoration: none;
+    }
+
+    a:hover {
+      color:goldenrod;
+      text-decoration:none;
+    }
+
     .topSection {
+      display: flex;
+      justify-content: space-between;
       height: 10rem;
       padding-top: 1rem;
+    }
+
+    #user_Container {
+      text-align: right;
+
+      width: 30rem;
+      margin: 1rem 3rem 0 0;
     }
 
     .middleSection {
@@ -68,9 +87,9 @@
       width: 5rem;
       height: 3rem;
       
-      background-color: white;
-      border-radius: 20px;
-      border: 1px solid lightgrey;
+      color: white;
+      background-color: darkgreen;
+      border-radius: 30px;  
     }
 
     .sorter {
@@ -79,9 +98,9 @@
       height: 3rem;
       margin: 0.5rem;
 
-      background-color: white;
-      border-radius: 15px;
-      border: 1px solid lightgrey;
+      color: white;
+      background-color: darkgreen;
+      border-radius: 30px;  
     }
 
     .listSection {
@@ -124,23 +143,57 @@
       text-align: center;
       font-size: 1.5rem;
       width: 8rem;
-      height: auto;
+      height: 2rem;
 
       margin: 1rem;
 
       /* background-color: crimson; */
       border: 3px solid crimson;
-      border-radius: 10px;
+      border-radius: 50%;
     }
 
   </style>
 
   <script>
-    // @@ 선택된 교육생 세션 유지용, 일단 스트링으로 표현, merge 후 수정 예정 @@
-    var pickId = "k"
-    sessionStorage.setItem("pickId", pickId)
-    // 아래는 로그인한 사용자 세션
-    var loadedId = sessionStorage.getItem("myId");
+    $(document).ready( function() {
+    showUser()
+    });
+      
+    
+    function showUser() {
+      if (sessionStorage.getItem('name')) {
+        $('#user_Container').append(`
+        <div style="font-size:x-large;">
+          <a href="/user/${sessionStorage.getItem('name')}/comment" style="font-size:xx-large;">${sessionStorage.getItem('name')}
+          </a>님 반갑습니다
+          <span id="logoutButton" style="margin-left:2rem; text-decoration: none; cursor: pointer; font-size:larger;">
+            로그아웃
+          </span>
+        <div>`
+        )
+
+        $('#logoutButton').on('click', function () {
+        // 로그아웃 시 필요한 동작 수행
+        sessionStorage.clear();
+        window.location.href = '/';
+      });
+
+      } else {
+        $('#user_Container').append(`
+        <div>
+          <a href="/user/login" style="text-decoration: none; font-size:xx-large;">로그인
+          </a>
+          <a href="/user/signup" style="margin-left:2rem; text-decoration: none; font-size:xx-large;">회원가입
+          </a>
+        <div>`
+        )
+      }
+    }
+    // // @@ 선택된 교육생 세션 유지용, 일단 스트링으로 표현, merge 후 수정 예정 @@
+    // var pickId = "k"
+    // sessionStorage.setItem("pickId", pickId)
+    // // 아래는 로그인한 사용자 세션
+    // var loadedId = sessionStorage.getItem("myId");
 
   </script>
 </head>
@@ -148,7 +201,9 @@
 <body>
   <section class="topSection">
     <div class="logo">
-      <a href="/main/list"><img src="../static/logo.png" width="300" height="120"></a>
+      <a href="/main/list"><img src="{{ url_for('static', filename='logo.png') }}" width="300" height="120" style="display:flex"></a>
+    </div>
+    <div id="user_Container">
     </div>
   </section>
   <section class="middleSection">
