--- a/templates/userPage.html
+++ b/templates/userPage.html
@@ -8,6 +8,10 @@
   <!-- JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
+  <!-- D3.js (워드 클라우드) -->
+  <link href="https://fonts.googleapis.com/css?family=Crete+Round" rel="stylesheet">
+  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+
   <title>정글 한 줄</title>
 
   <style>
@@ -190,8 +194,9 @@
           return
         }
         let GKey = response['GKey']
+
         let BKey = response['BKey']
-        // let Nick = response['Nickname']
+        let Nick = response['Nickname']
         let Comments = response['Comment']
         let IsShow = response['IsShow']
         let IsWrited = response['IsWrited']
@@ -203,11 +208,11 @@
           $('#Bkey-list').css('display', 'none');
         }
 
-        addKeyword(GKey, BKey, Comments, IsWrited)
+        addKeyword(GKey, BKey, Comments, IsWrited, Nick)
       }
     })
 
-    function addKeyword(GKey, BKey, Comments, IsWrited) {
+    function addKeyword(GKey, BKey, Comments, IsWrited, Nick) {
       for (let i = 0; i < GKey.length; i++) {
         let GKeyValue = Object.keys(GKey[i]).join(", "); // GPT
 
@@ -225,9 +230,10 @@
         let Comment = Object.values(Comments[i]).join('') // GPT
         $('#Comment-list').append(`
           <div class="comment">${Comment}</div>
+          <div class="comment">${Nick}</div>
         `);
       }
-      console.log(IsWrited)
+
       if (IsWrited.includes(loadedId)) {
         $('#Bkey-list').css('display', 'flex');
         $('#Gkey-list').css('display', 'flex');
@@ -237,8 +243,69 @@
         $('#Gkey-list').css('display', 'none');
         $('#Comment-list').css('display', 'none');
       }
+      // 워드클라우드 모듈불러오기
+      zingchart.MODULESDIR = 'https://cdn.zingchart.com/modules/';
+
+      // 워드클라우드에 사용할 words 배열 생성
+      var wordsArray = GKey.map(function (item) {
+        var key = Object.keys(item)[0]; // GKey 데이터의 키
+        var count = item[key]; // GKey 데이터의 밸류값
+        return {
+          text: key,
+          count: count
+        };
+      });
+
+      // 워드클라우드 설정
+      var myConfig = {
+        type: 'wordcloud',
+        options: {
+          words: wordsArray,
+          minLength: 5,
+          ignore: [''],
+          maxItems: 40,
+          aspect: 'spiral',
+          colorType: 'palette',
+          palette: ['#D32F2F', '#5D4037', '#1976D2', '#E53935', '#6D4C41', '#1E88E5', '#F44336', '#795548', '#2196F3', '#EF5350', '#8D6E63', '#42A5F5'],
+          style: {
+            fontFamily: 'Crete Round',
+            hoverState: {
+              backgroundColor: '#D32F2F',
+              borderRadius: 2,
+              fontColor: 'white'
+            },
+            tooltip: {
+              text: '%text: %hits',
+              visible: true,
+              alpha: 0.9,
+              backgroundColor: '#1976D2',
+              borderRadius: 2,
+              borderColor: 'none',
+              fontColor: 'white',
+              fontFamily: 'Georgia',
+              textAlpha: 1
+            }
+          }
+        },
+        source: {
+          fontColor: '#64B5F6',
+          fontSize: 10,
+          fontFamily: 'Georgia',
+          fontWeight: 'normal',
+          marginBottom: '10%'
+        }
+
+      };
+    //워드클라우드 렌더링
+    zingchart.render({
+          id: 'keyword_Container',
+          data: myConfig,
+          height: 400,
+          width: '100%'
+        });
+      };
     }
-  }
+
 </script>
 <html>
 
@@ -258,6 +325,7 @@
     <button class="button" type="button" onclick="location.href='/user/writing'">등록하러 가기</button>
     <div id="keyword_Container">
       <h1 style="padding-left: 2rem;">키워드</h1>
+
       <div class="keywordBox" id="Gkey-list">
 
       </div>
@@ -273,6 +341,7 @@
     </div>
     {% endfor %}
   </section>
+
 </body>
 
 </html>
