--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -38,7 +38,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
 
       margin: 10rem 10rem;
 
@@ -116,8 +116,9 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      justify-content: space-around;
 
-      width: 80rem;
+      width: 75%;
       height: 15rem;
 
       margin-bottom: 3rem;
@@ -129,27 +130,25 @@
     .imgBox {
       width: 10rem;
       height: 10rem;
-
-      margin: 0 15rem 0 5rem;
     }
 
     .name {
       text-align: center;
       width: 10rem;
-      margin-right: 20rem;
     }
 
     .keyword {
       text-align: center;
       font-size: 1.5rem;
-      width: 8rem;
-      height: 2rem;
+      width: 100%;
+      height: 100%;
 
       margin: 1rem;
+      padding: 0.5rem;
 
       /* background-color: crimson; */
-      border: 3px solid crimson;
-      border-radius: 50%;
+      border: 1px solid lightgray;
+      border-radius: 10px;
     }
 
   </style>
